--- a/Day 00/TODO
+++ b/Day 00/TODO
@@ -1,9 +1,20 @@
+*** Day 00 ***
+
 ex00
 std::transform from forbidden <algorithm>:
 	http://www.cplusplus.com/reference/algorithm/transform/
+
 ex01
 ./PhoneBook TODO
 	Ctrl+D
 ./PhoneBook TODO
 	SEARCH
 	-
+./PhoneBook TODO
+	SEARCH
+	2ADD
+TODO: cin in constructor
+TODO: number of objects - static variable
+
+ex02
+member function ?
