--- a/Day 03/TODO
+++ b/Day 03/TODO
@@ -4,6 +4,10 @@ ex00
 	OK	ft.takeDamage(1); // damage < armor
 	OK	ft.beRepaired(-10);
 	OK	ft.takeDamage(-10);
+	default constructor
 
-ex02
-	main
+ex01
+	default constructor
+
+constructor destructor tabs
+multiple inheritance virtual
