--- a/Day 04/TODO
+++ b/Day 04/TODO
@@ -4,3 +4,9 @@ ex01
 	OK attacks after dying
 	OK munant takes less damage
 
+ex02
+	OK copying
+	OK erasing before copying
+
+ex03
+	OK character cloning
