--- a/Day 04/TODO
+++ b/Day 04/TODO
@@ -1,12 +1,13 @@
 *** Day 04 ***
 
 ex01
-	OK attacks after dying
-	OK munant takes less damage
+	OK	attacks after dying
+	OK	munant takes less damage
 
 ex02
-	OK copying
-	OK erasing before copying
+	OK	copying
+	OK	erasing before copying
+		sf making not learned materia
 
 ex03
 	OK character cloning
